--- a/userprofile/templates/userprofile/home.html
+++ b/userprofile/templates/userprofile/home.html
@@ -1,6 +1,22 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block content %}
-{% include "./components/home_slider.html" %}
+<section class="hero container valign-wrapper">
+    <div class="row center-align ">
+        <div class="col s12 l6 hide-on-med-and-down row-margin-add">
+            <img height="400" width="auto" src="{% static './img/pytagora-mobile.png' %}" alt="pytagora mobile mockup" />
+        </div>
+        <div class="col s12 l6">
+            <h2>Collect and store <span id="keyword">references</span> from your previous employers</h2>
+            <div class="row margin-add">
+                <div class="col s12">
+                    <a class="btn" href="{% url 'signup' %}">Get started</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 {% endblock content %}
 
+{% include "./components/home_slider.html" %}
