--- a/userprofile/templates/userprofile/test_profile.html
+++ b/userprofile/templates/userprofile/test_profile.html
@@ -59,7 +59,7 @@
         <section>
             <div class="row"></div>
             <div class="row">
-                <div id="reference-box" class="col s12 card-panel rounded left-align z-depth-4">
+                <div id="reference-box" class="col s12 card-panel left-align z-depth-4">
                     <h3 class="hs">
                         My References <i class="material-icons small right">list</i>
                     </h3>
