--- a/userprofile/templates/userprofile/home.html
+++ b/userprofile/templates/userprofile/home.html
@@ -30,7 +30,7 @@
                     <h3 class="hl amber-text">So you are interviewing for multiple jobs...</h3>
                     <p>...and you need call to all your previous employers to ask if they can be your reference in your upcoming job interviews.</p>
                 </div>
-                <div class="col s12 m4  center-align ">
+                <div class="col s12 m4 ft-img center-align ">
                     <img class="left"
                          height="auto"
                          width="100%"
