--- a/userprofile/templates/base.html
+++ b/userprofile/templates/base.html
@@ -77,7 +77,7 @@
         {% endblock content %}
        </main>
 
-        <footer class="page-footer  teal darken-2" >
+        <footer class="page-footer blue-grey darken-4 z-index-2" >
             <div class="container">
                 <div class="row">
                     <div class="col l6 s12">
@@ -103,7 +103,7 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-copyright amber accent-4">
+            <div class="footer-copyright grey darken-4">
                 <div class="container">
                     © 2014 Copyright Text
                     <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
