--- a/userprofile/templates/base.html
+++ b/userprofile/templates/base.html
@@ -3,8 +3,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"/>
-        <meta name="description" content="Free Web tutorials"/>
-        <meta name="keywords" content="HTML, CSS, JavaScript"/>
+        <meta name="description" content="References at will"/>
+        <meta name="keywords" content="References reference check recruitment process recruiting"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         {% comment %} Materialize css / js {% endcomment %}
