style update password page

--- a/userprofile/templates/userprofile/change_password.html
+++ b/userprofile/templates/userprofile/change_password.html
@@ -1,5 +1,37 @@
-<form action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="update password">
-</form>
+{% extends "base.html" %}
+{% load static %}
+{% block content %}
+<div class="container">
+    <div class="heading-row row row-margin-delete">
+        <div class="heading-box right-align col s12">
+            <h2 class="hm ">Ask for a reference</h2>
+            <p>Simply by sending this form</p>
+        </div>
+    </div>
+    <div class="crumbs-row row">
+        <nav class="crumbs-box col s10 m6 right transparent z-depth-0">
+            <div class="nav-wrapper right ">
+                  <a  href="{% url 'test_profile' %}" class="breadcrumb grey-text">Profile</a>
+                  <a  href="{% url 'send_request' %}" class="breadcrumb black-text">Change password</a>
+            </div>
+        </nav>
+    </div>
+    <div class="row">
+        {% include "./components/forms/change_password_form.html" %}
+
+    </div>
+</div>
+<script defer type="text/javascript" src="{% static 'base/js/components/requestForm.js' %}">
+document.addEventListener('DOMContentLoaded', function() {
+    const fromToHelper = document.getElementById('from-to-helper');
+    
+    const companyField = document.getElementById('id_company_name');
+    companyField.document.addEventListener('change', updateValue);
+    
+    const updateValue = (event) => {
+        const company = event.target.value;
+        fromToHelper.innerHTML = `between what dates did you work at ${company}`
+    };
+});
+</script>
+{% endblock content %}
