update login form img/text

--- a/userprofile/templates/userprofile/components/forms/base_form.html
+++ b/userprofile/templates/userprofile/components/forms/base_form.html
@@ -1,8 +1,8 @@
 
   <div class="card">
-    <div class="card-image ">
+    <div class="card-image teal darken-3">
       {% comment %} remove {% endcomment %}
-      <div class="form-header deep-purple lighten-3">
+      <div class="form-header">
         <div class="form-image-container">
           {% block form_image %}
           {% endblock form_image %}
