--- a/userprofile/templates/userprofile/components/forms/login_form.html
+++ b/userprofile/templates/userprofile/components/forms/login_form.html
@@ -3,11 +3,11 @@
 {% load materializecss %}
 
 {% block form_image %}
-<img height="200" width="auto" src="{% static 'img/computer-guy.svg' %}" alt="" />
+<img height="200" width="auto" src="{% static 'img/birds.svg' %}" alt="" />
 {% endblock form_image %}
 
 {% block form_title %}
-    Let's get those references.
+    Please login to continue
 {% endblock form_title %}
 
 {% block form %}
