--- a/userprofile/templates/userprofile/components/forms/signup_form.html
+++ b/userprofile/templates/userprofile/components/forms/signup_form.html
@@ -3,7 +3,7 @@
 {% load materializecss %}
 
 {% block form_image %}
-<img height="200" width="auto" src="{% static 'img/computer-guy.svg' %}" alt="" />
+<img height="200" width="auto" src="{% static 'img/calming-view.svg' %}" alt="" />
 {% endblock form_image %}
 
 {% block form_title %}
