--- a/userprofile/templates/userprofile/components/forms/send_request_form.html
+++ b/userprofile/templates/userprofile/components/forms/send_request_form.html
@@ -4,7 +4,7 @@
 {% block form_image %}
     <img height="200"
          width="auto"
-         src="{% static 'img/computer-guy.svg' %}"
+         src="{% static 'img/write.svg' %}"
          alt=""/>
 {% endblock form_image %}
 {% block form_title %}
