--- a/userprofile/templates/userprofile/respond.html
+++ b/userprofile/templates/userprofile/respond.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col l9  align-left">{% include "./components/forms/respond_form.html" %}</div>
             <div class="col l3 ">
-                <h2 class="deep-purple-text">hello.</h2>
+                <h2 class="teal-text text-darken-2">hello.</h2>
                 <p>
                     thank you for taking the time to answer some 
                     qustions about your former
@@ -12,7 +12,7 @@
                 </p> 
 
                 <hr />
-                <h3 class="hs deep-purple-text">What is pytagora?</h3>
+                <h3 class="hs teal-text text-darken-2">What is pytagora?</h3>
                 <p>
                     Pytagora is a service that helps
                     job seekers to get a reference
@@ -24,7 +24,7 @@
                     in a recruiting process and saves them time. 
                 </p>
 
-                <h4 class="hs deep-purple-text">What's in it for me?</h4>
+                <h4 class="hs teal-text text-darken-2">What's in it for me?</h4>
                 <p>
                     Pytagora lets its users store their references
                     forever.
@@ -36,7 +36,7 @@
 
                 </p>
                 <hr/>
-                <p class="deep-purple-text" >Would you like to store your own references with pytagora? <br/> <a target="_blank" href="{% url 'signup' %}">sign up here.</a></p>
+                <p class="teal-text text-darken-2" >Would you like to store your own references with pytagora? <br/> <a target="_blank" href="{% url 'signup' %}">sign up here.</a></p>
                 
             </div>
             
